Expand applyNopeWindow to prompt each player individually for nope chaining
Each other player is now asked to nope in sequence rather than a single
collective prompt, allowing nopes to chain across multiple players.